--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,16 @@ body {
 }
 
 .hold {
-  background: #e9e9e9;
-  border: 1px solid #a8a8a8;
+  background: #dad3d3;
+  border: 1px solid #cec3c3;
 }
 
 .hide {
   display: none;
+}
+
+.hovered {
+  border-radius: 20px;
+
+  background: linear-gradient(#cfd1d6, #d6dbdf 50%);
 }
